fixed overflow to auto and hid the new applicants label

--- a/h2a.css
+++ b/h2a.css
@@ -26,6 +26,7 @@ th {
 
 .tall {
 	height: 640px;
+	overflow: auto;
 }
 
 form {
